--- a/result.html
+++ b/result.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,6 +22,7 @@
         form input[type="text"], form select,
         form textarea,
         form input[type="date"],
+        form input[type="number"],
         form input[type="file"] {
             width: 100%;
             padding: 10px;
@@ -37,6 +37,7 @@
         form select::placeholder,
         form textarea::placeholder,
         form input[type="date"]::placeholder,
+        form input[type="number"]::placeholder,
         form input[type="file"]::placeholder {
             color: grey;
         }
@@ -48,6 +49,14 @@
         .edit-btn { background-color: #2ecc71; }
         .delete-btn { background-color: #e74c3c; }
         #searchInput { width: 200px; padding: 10px; margin-top: 10px; border: 1px solid #ddd; border-radius: 4px; }
+        .static-text {
+    padding: 10px;
+    background-color: #f0f0f0;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    color: #333;
+    font-weight: bold;
+}
         .success-alert { background-color: #2ecc71; color: white; text-align: center; padding: 10px; margin-top: 20px; display: none; border-radius: 4px; }
         .print-button { margin-bottom: 10px; text-align: right; }
         .print-button button { background-color: #3498db; color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; }
@@ -75,49 +84,34 @@
 
         <div class="main-content">
             <form id="resultForm">
-                <label for="nama">Nama <span class="required-asterisk">*</span></label>
-                <input type="text" id="nama" required>
-                <label for="npk">NPK <span class="required-asterisk">*</span></label>
-                <input type="text" id="npk" required>
-                <label for="kebutuhan">Kebutuhan <span class="required-asterisk">*</span></label>
-                <select id="kebutuhan" required>
-                    <option value="Peminjaman Aset">Peminjaman Aset</option>
-                    <option value="Permintaan Aset">Permintaan Aset</option>
-                </select>
-                <label for="item">Item <span class="required-asterisk">*</span></label>
-                <select id="item" required>
-                    <option value="laptop">Laptop</option>
-                    <option value="chair">Chair</option>
-                    <option value="printer">Printer</option>
-                    <option value="stapler">Stapler</option>
-                    <option value="Whiteboard">Whiteboard</option>
-                    <option value="lamp">Desk Lamp</option>
-                    <option value="notebook">Notebook</option>
-                    <option value="cabinet">File Cabinet</option>
-                    <option value="monitor">Monitor</option>
-                    <option value="bookshelf">Bookshelf</option>
-                </select>
-                <label for="department">dep <span class="required-asterisk">*</span></label>
-                <select id="department" required>
-                    <option value="Engineering">Engineering</option>
-                    <option value="QC">QC</option>
-                    <option value="Produksi">Produksi</option>
-                    <option value="General Affair">General Affair</option>
-                    <option value="HRD">HRD</option>
-                    <option value="Accounting">Accounting</option>
-                    <option value="Purchasing">Purchasing</option>
-                    <option value="PPiC">PPiC</option>
-                    <option value="Maintenance">Maintenance</option>
-                    <option value="IT">IT</option>
-                    <option value="Finance">Finance</option>
-                </select>
-                <textarea id="keperluan" placeholder="Keperluan" required></textarea>
+                <label for="nomor_result">Nomor Result</label>
+                <div id="nomor_result" class="static-text">RES/TI/2024/5982</div>
+
+                <label for="quantity">Quantity <span class="required-asterisk">*</span></label>
+                <input type="number" id="quantity" required min="1">
+
+                <label for="kode_barang">Kode Barang <span class="required-asterisk">*</span></label>
+                <input type="text" id="kode_barang" required>
+
+                <label for="tanggal">Tanggal <span class="required-asterisk">*</span></label>
+                <input type="date" id="tanggal" required>
+
                 <label for="status">Status <span class="required-asterisk">*</span></label>
                 <select id="status" required>
                     <option value="Disetujui">Disetujui</option>
                     <option value="Belum Disetujui">Belum Disetujui</option>
                     <option value="Diasetkan">Diasetkan</option>
                 </select>
+
+                <label for="note">Note</label>
+                <textarea id="note"></textarea>
+
+                <label for="lama_peminjaman">Lama Peminjaman (hari) <span class="required-asterisk">*</span></label>
+                <input type="number" id="lama_peminjaman" required min="1">
+
+                <label for="foto">Foto</label>
+                <input type="file" id="foto" accept="image/*">
+
                 <input type="submit" value="Submit Result">
             </form>
 
@@ -131,13 +125,14 @@
             <table id="resultTable">
                 <thead>
                     <tr>
-                        <th onclick="sortTable(0)">Nama</th>
-                        <th onclick="sortTable(1)">NPK</th>
-                        <th onclick="sortTable(2)">Kebutuhan</th>
-                        <th onclick="sortTable(3)">Item</th>
-                        <th onclick="sortTable(4)">Department</th>
-                        <th onclick="sortTable(5)">Keperluan</th>
-                        <th onclick="sortTable(6)">Status</th>
+                        <th onclick="sortTable(0)">Nomor Result</th>
+                        <th onclick="sortTable(1)">Quantity</th>
+                        <th onclick="sortTable(2)">Kode Barang</th>
+                        <th onclick="sortTable(3)">Tanggal</th>
+                        <th onclick="sortTable(4)">Status</th>
+                        <th onclick="sortTable(5)">Note</th>
+                        <th onclick="sortTable(6)">Lama Peminjaman</th>
+                        <th>Foto</th>
                         <th>Action</th>
                     </tr>
                 </thead>
@@ -152,26 +147,37 @@
         document.getElementById('searchInput').addEventListener('input', function() {
             filterResults(this.value);
         });
+let currentResultNumber = 5982; // Mulai dari 5982
 
-        function handleSubmit(e) {
-            e.preventDefault();
-            const result = {
-                nama: document.getElementById('nama').value,
-                npk: document.getElementById('npk').value,
-                kebutuhan: document.getElementById('kebutuhan').value,
-                item: document.getElementById('item').value,
-                department: document.getElementById('department').value,
-                keperluan: document.getElementById('keperluan').value,
-                status: document.getElementById('status').value
-            };
-            saveResult(result);
-            addResultToTable(result);
-            this.reset();
-            document.getElementById('successAlert').style.display = 'block';
-            setTimeout(() => {
-                document.getElementById('successAlert').style.display = 'none';
-            }, 3000);
-        }
+function generateResultNumber() {
+    const year = new Date().getFullYear();
+    const resultNumber = `RES/TI/${year}/${currentResultNumber.toString().padStart(4, '0')}`;
+    currentResultNumber++;
+    return resultNumber;
+}
+
+function handleSubmit(e) {
+    e.preventDefault();
+    const resultNumber = generateResultNumber();
+    document.getElementById('nomor_result').textContent = resultNumber;
+    const result = {
+        nomor_result: resultNumber,
+        quantity: document.getElementById('quantity').value,
+        kode_barang: document.getElementById('kode_barang').value,
+        tanggal: document.getElementById('tanggal').value,
+        status: document.getElementById('status').value,
+        note: document.getElementById('note').value,
+        lama_peminjaman: document.getElementById('lama_peminjaman').value,
+        foto: document.getElementById('foto').files[0] ? document.getElementById('foto').files[0].name : 'No file'
+    };
+    saveResult(result);
+    addResultToTable(result);
+    this.reset();
+    document.getElementById('successAlert').style.display = 'block';
+    setTimeout(() => {
+        document.getElementById('successAlert').style.display = 'none';
+    }, 3000);
+}
 
         function saveResult(result) {
             const results = JSON.parse(localStorage.getItem('results')) || [];
@@ -180,21 +186,28 @@
         }
 
         function loadResults() {
-            const results = JSON.parse(localStorage.getItem('results')) || [];
-            results.forEach(result => addResultToTable(result));
+    const results = JSON.parse(localStorage.getItem('results')) || [];
+    results.forEach(result => {
+        addResultToTable(result);
+        // Update currentResultNumber based on the highest existing number
+        const resultNumber = parseInt(result.nomor_result.split('/')[3]);
+        if (resultNumber >= currentResultNumber) {
+            currentResultNumber = resultNumber + 1;
         }
-
+    });
+}
         function addResultToTable(result) {
             const tableBody = document.getElementById('resultTableBody');
             const row = tableBody.insertRow();
             row.innerHTML = `
-                <td>${result.nama}</td>
-                <td>${result.npk}</td>
-                <td>${result.kebutuhan}</td>
-                <td>${result.item}</td>
-                <td>${result.department}</td>
-                <td>${result.keperluan}</td>
+                <td>${result.nomor_result}</td>
+                <td>${result.quantity}</td>
+                <td>${result.kode_barang}</td>
+                <td>${result.tanggal}</td>
                 <td>${result.status}</td>
+                <td>${result.note}</td>
+                <td>${result.lama_peminjaman}</td>
+                <td>${result.foto}</td>
                 <td>
                     <button class="edit-btn" onclick="editResult(this)">Edit</button>
                     <button class="delete-btn" onclick="deleteResult(this)">Delete</button>
@@ -205,13 +218,13 @@
         function editResult(button) {
             const row = button.parentNode.parentNode;
             const cells = row.cells;
-            document.getElementById('nama').value = cells[0].textContent;
-            document.getElementById('npk').value = cells[1].textContent;
-            document.getElementById('kebutuhan').value = cells[2].textContent;
-            document.getElementById('item').value = cells[3].textContent;
-            document.getElementById('department').value = cells[4].textContent;
-            document.getElementById('keperluan').value = cells[5].textContent;
-            document.getElementById('status').value = cells[6].textContent;
+            document.getElementById('nomor_result').value = cells[0].textContent;
+            document.getElementById('quantity').value = cells[1].textContent;
+            document.getElementById('kode_barang').value = cells[2].textContent;
+            document.getElementById('tanggal').value = cells[3].textContent;
+            document.getElementById('status').value = cells[4].textContent;
+            document.getElementById('note').value = cells[5].textContent;
+            document.getElementById('lama_peminjaman').value = cells[6].textContent;
             row.remove();
         }
 
@@ -227,13 +240,14 @@
             rows.forEach(row => {
                 const cells = row.cells;
                 results.push({
-                    nama: cells[0].textContent,
-                    npk: cells[1].textContent,
-                    kebutuhan: cells[2].textContent,
-                    item: cells[3].textContent,
-                    department: cells[4].textContent,
-                    keperluan: cells[5].textContent,
-                    status: cells[6].textContent
+                    nomor_result: cells[0].textContent,
+                    quantity: cells[1].textContent,
+                    kode_barang: cells[2].textContent,
+                    tanggal: cells[3].textContent,
+                    status: cells[4].textContent,
+                    note: cells[5].textContent,
+                    lama_peminjaman: cells[6].textContent,
+                    foto: cells[7].textContent
                 });
             });
             localStorage.setItem('results', JSON.stringify(results));
