--- a/karyawan.html
+++ b/karyawan.html
@@ -20,6 +20,17 @@
         table {width: 100%; border-collapse: collapse; margin-top: 20px; background-color: white; box-shadow: 0 0 10px rgba(0,0,0,0.1);}
         th, td {text-align: left; padding: 12px; border-bottom: 1px solid #ddd;}
         th {background-color: #3498db; color: white;}
+        .print-button, .toggle-button, .add-name-button {
+            background-color: #3498db;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            display: inline-block;
+            margin-top: 10px;
+            margin-right: 10px;
+        }
         .action-buttons button {margin: 2px; padding: 5px 10px; border: none; border-radius: 4px; cursor: pointer;}
         .save-button {background-color: #2ecc71; color: white;}
         .undo-button {background-color: #f39c12; color: white;}
@@ -50,7 +61,76 @@
     <div class="main-content">
         <div id="employeeForm" style="display: none;">
             <form id="addEmployeeForm">
-                <!-- ... (form content remains the same) ... -->
+                 <select id="Nama" required>
+                    <option value="INDIRA RULLY PRICILIA">INDIRA RULLY PRICILIA</option>
+                    <option value="PUTUT ADI PRAKOSO">PUTUT ADI PRAKOSO</option>
+                    <option value="RIJKI HIDAYAT">RIJKI HIDAYAT</option>
+                    <option value="FERRI RIZALDI">FERRI RIZALDI</option>
+                    <option value="TRIARDHY FIKRI NUGRAHA">TRIARDHY FIKRI NUGRAHA</option>
+                    <option value="MOSSES ARA'AL DE SELA">MOSSES ARA'AL DE SELA</option>
+                    <option value="JAELANI">JAELANI</option>
+                    <option value="JIHAN TSHIVANA">JIHAN TSHIVANA</option>
+                    <option value="OCTAVIANA">OCTAVIANA</option>
+                    <option value="RIZQI SAPUTRI">RIZQI SAPUTRI</option>
+                    <option value="ARYA PRATAMA PUTRA">ARYA PRATAMA PUTRA</option>
+                    <option value="DEWI RABIATUL ZAHRO">DEWI RABIATUL ZAHRO</option>
+                    <option value="NOVIA ANGGRAINI">NOVIA ANGGRAINI</option>
+                    <option value="DEBORA HIZKHIA PARDEDE">DEBORA HIZKHIA PARDEDE</option>
+                </select>
+                <label for="npk">npk</label>
+                <select id="npk" required>
+                    <option value="12355">12355</option>
+                    <option value="12364">12364</option>
+                    <option value="12369">12369</option>
+                    <option value="12360">12360</option>
+                    <option value="12356">12356</option>
+                    <option value="12399">12399</option>
+                    <option value="12394">12394</option>
+                    <option value="12387">12387</option>
+                    <option value="12381">12381</option>
+                    <option value="12376">12376</option>
+                    <option value="12372">12372</option>
+                    <option value="12368">12368</option>
+                    <option value="12363">12363</option>
+                    <option value="12391">12391</option>
+                </select>
+                <div class="kebutuhan-options">
+                    <label><input type="radio" name="kebutuhan" value="Peminjaman Aset" required> Peminjaman Aset</label>
+                    <label><input type="radio" name="kebutuhan" value="Permintaan Aset" required> Permintaan Aset</label>
+                </div>
+                <label for ="item">item</label>
+                <select id="item" required>
+                    <option value="Laptop">Laptop</option>
+                    <option value="Chair">Chair</option>
+                    <option value="Printer">Printer</option>
+                    <option value="Stapler">Stapler</option>
+                    <option value="Whiteboard">Whiteboard</option>
+                    <option value="Desk Lamp">Desk lamp</option>
+                    <option value="Cabinet">Cabinet</option>
+                    <option value="Notebook">Notebook</option>
+                    <option value="Monitor">Monitor</option>
+                    <option value="Speaker">Speaker</option> </select>
+                <label for ="department">department</label>
+                <select id="department" required>
+                    <option value="Engineering">Engineering</option>
+                    <option value="QC">QC</option>
+                    <option value="Produksi">Produksi</option>
+                    <option value="General Affair">General Affair</option>
+                    <option value="HRD">HRD</option>
+                    <option value="Accounting">Accounting</option>
+                    <option value="Purchasing">Purchasing</option>
+                    <option value="PPiC">PPiC</option>
+                    <option value="Maintenance">Maintenance</option>
+                    <option value="IT">IT</option>
+                    <option value="Finance">Finance</option>
+                </select>
+                <textarea id="keperluan" placeholder="Keperluan" required></textarea>
+                <input type="file" id="foto" accept="image/*" required>
+                <br>
+                <label for="duration">Lama Peminjaman:</label>
+                <select id="duration" required></select>
+                <br>
+                <input type="submit" value="Tambah">
             </form>
             <div class="success-alert" id="successAlert" style="display: none;">Data successfully submitted!</div>
         </div>
@@ -66,6 +146,7 @@
             </select>
             <button class="print-button" onclick="printTable()">Print</button>
             <button class="toggle-button" onclick="toggleForm()">Add</button>
+            <button class="add-name-button" id="addNewNameBtn">Add New Name</button>
         </div>
         <table id="employeeTable">
             <thead>
