--- a/karyawan.html
+++ b/karyawan.html
@@ -38,6 +38,21 @@
         .kebutuhan-options {display: flex; gap: 10px; margin: 10px 0;}
         .kebutuhan-options label {display: flex; align-items: center; gap: 5px;}
         #searchInput, #sortInput {width: 200px; display: inline-block; margin-right: 10px;}
+        .logout-btn {
+            background-color: #99564f;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+            width: 100%;
+            margin-top: 20px;
+        }
+        .logout-btn:hover {
+            background-color: #c0392b;
+        }
         .controls {margin-bottom: 20px;}
         @media print {.action-buttons, td:nth-last-child(1), td:nth-last-child(2), th:nth-last-child(1), th:nth-last-child(2), .print-button, .toggle-button, .top-bar, .sidebar {display: none !important;}}
         .success-alert {display: none; background-color: #2ecc71; color: white; padding: 10px; border-radius: 4px; margin-top: 10px;}
@@ -47,8 +62,8 @@
     <div class="top-bar">
         <h1>Karyawan</h1>
         <div class="auth-buttons">
-            <button onclick="window.location.href='login.html'">Login</button>
-            <button onclick="window.location.href='login.html'">Logout</button>
+            <button onclick="window.location.href='login.html'"><i class="fas fa-user"></i>Login</button>
+            <button class="logout-btn" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
         </div>
     </div>
     <div class="sidebar">
@@ -149,7 +164,7 @@
             <button class="add-name-button" id="addNewNameBtn">Add New Name</button>
         </div>
         <table id="employeeTable">
-            <thead>
+            <thead>              
                 <tr>
                     <th>ID</th>
                     <th>Nama</th>
@@ -403,6 +418,10 @@
             const savedNames = JSON.parse(localStorage.getItem('employeeNames')) || [];
             const namaSelect = document.getElementById('Nama');
             savedNames.forEach(name => addNameToSelect(namaSelect, name));
+        }
+        function logout() {
+            // Logic for logging out (e.g., clearing session storage, redirecting to login page)
+            window.location.href = 'login.html';
         }
     </script>
 </body>
