--- a/request.html
+++ b/request.html
@@ -232,9 +232,9 @@
                 <li><a href="karyawan.html">Karyawan</a></li>
                 <li><a href="request.html">Request</a></li>
                 <li><a href="result.html">Result</a></li>
-                <button class="logout-btn" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
         </div>
             </ul>
+        <button class="logout-btn" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
         </div>
         <div class="main-content">
             <h2>Request Form</h2>
@@ -265,11 +265,37 @@
                 </select>
                 <label for="Nama">Nama</label>
                 <select id="Nama" required>
-                    <!-- Options will be dynamically populated -->
+                    <option value="INDIRA RULLY PRICILIA">INDIRA RULLY PRICILIA</option>
+                    <option value="PUTUT ADI PRAKOSO">PUTUT ADI PRAKOSO</option>
+                    <option value="RIJKI HIDAYAT">RIJKI HIDAYAT</option>
+                    <option value="FERRI RIZALDI">FERRI RIZALDI</option>
+                    <option value="TRIARDHY FIKRI NUGRAHA">TRIARDHY FIKRI NUGRAHA</option>
+                    <option value="MOSSES ARA'AL DE SELA">MOSSES ARA'AL DE SELA</option>
+                    <option value="JAELANI">JAELANI</option>
+                    <option value="JIHAN TSHIVANA">JIHAN TSHIVANA</option>
+                    <option value="OCTAVIANA">OCTAVIANA</option>
+                    <option value="RIZQI SAPUTRI">RIZQI SAPUTRI</option>
+                    <option value="ARYA PRATAMA PUTRA">ARYA PRATAMA PUTRA</option>
+                    <option value="DEWI RABIATUL ZAHRO">DEWI RABIATUL ZAHRO</option>
+                    <option value="NOVIA ANGGRAINI">NOVIA ANGGRAINI</option>
+                    <option value="DEBORA HIZKHIA PARDEDE">DEBORA HIZKHIA PARDEDE</option>
                 </select>
                 <label for="peminjam">Peminjam</label>
                 <select id="peminjam" required>
-                    <!-- Options will be dynamically populated -->
+                    <option value="INDIRA RULLY PRICILIA">INDIRA RULLY PRICILIA</option>
+                    <option value="PUTUT ADI PRAKOSO">PUTUT ADI PRAKOSO</option>
+                    <option value="RIJKI HIDAYAT">RIJKI HIDAYAT</option>
+                    <option value="FERRI RIZALDI">FERRI RIZALDI</option>
+                    <option value="TRIARDHY FIKRI NUGRAHA">TRIARDHY FIKRI NUGRAHA</option>
+                    <option value="MOSSES ARA'AL DE SELA">MOSSES ARA'AL DE SELA</option>
+                    <option value="JAELANI">JAELANI</option>
+                    <option value="JIHAN TSHIVANA">JIHAN TSHIVANA</option>
+                    <option value="OCTAVIANA">OCTAVIANA</option>
+                    <option value="RIZQI SAPUTRI">RIZQI SAPUTRI</option>
+                    <option value="ARYA PRATAMA PUTRA">ARYA PRATAMA PUTRA</option>
+                    <option value="DEWI RABIATUL ZAHRO">DEWI RABIATUL ZAHRO</option>
+                    <option value="NOVIA ANGGRAINI">NOVIA ANGGRAINI</option>
+                    <option value="DEBORA HIZKHIA PARDEDE">DEBORA HIZKHIA PARDEDE</option>
                 </select>
                 <label for="item">Item</label>
                 <select id="item" required>
@@ -399,10 +425,6 @@
                 deleteBtn.addEventListener('click', () => deleteRequest(index));
                 actionCell.appendChild(deleteBtn);
             });
-        }
-        function logout() {
-            // Logic for logging out (e.g., clearing session storage, redirecting to login page)
-            window.location.href = 'login.html';
         }
         function addRequest() {
             const requests = JSON.parse(localStorage.getItem('requests')) || [];
@@ -542,7 +564,10 @@
                 row.deleteCell(-1); // Remove the Action column
                 printWindow.document.write(row.outerHTML);
             }
-            
+            function logout() {
+            // Logic for logging out (e.g., clearing session storage, redirecting to login page)
+            window.location.href = 'login.html';
+        }
             printWindow.document.write('</table>');
             printWindow.document.write('</body></html>');
             printWindow.document.close();
