--- a/request.html
+++ b/request.html
@@ -14,6 +14,7 @@
             padding: 0;
             display: flex;
             flex-direction: column;
+            min-height: 100vh;
         }
         .top-bar {
             position: fixed;
@@ -40,16 +41,19 @@
         }
 
         .container {
-            flex: 1;
             display: flex;
+            flex: 1;
+            padding-top: 100px; /* Adjust this value based on your top bar height */
         }
         .sidebar {
             width: 250px;
             background-color: #2c3e50;
             color: white;
             padding: 20px;
-            height: 100vh;
+            height: calc(100vh - 100px); /* Subtract top bar height */
             box-sizing: border-box;
+            position: fixed;
+            overflow-y: auto;
         }
         .sidebar h3 {
             color: white;
@@ -69,10 +73,23 @@
             display: block;
             padding: 10px 0;
         }
+        .logout-btn {
+            background-color: #e74c3c;
+            color: white;
+            border: none;
+            padding: 10px;
+            width: 100%;
+            text-align: left;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+        .logout-btn:hover {
+            background-color: #c0392b;
+        }
         .main-content {
             flex: 1;
             padding: 20px;
-            position: relative;
+            margin-left: 250px; /* Match sidebar width */
         }
         h2 {
             color: #34495e;
@@ -207,8 +224,7 @@
     <div class="top-bar">
         <h1>Request Form</h1>
         <div class="auth-buttons">
-            <button onclick="window.location.href='login.html'">Login</button>
-            <button onclick="window.location.href='login.html'">Logout</button>
+            <button onclick="window.location.href='login.html'"><i class="fas fa-user"></i>  Login</button>
         </div>
     </div>
     <div class="container">
@@ -220,6 +236,7 @@
                 <li><a href="request.html">Request</a></li>
                 <li><a href="result.html">Result</a></li>
             </ul>
+            <button class="logout-btn" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
         </div>
         <div class="main-content">
             <h2>Request Form</h2>
@@ -227,7 +244,7 @@
                 <button id="addButton" class="print-btn">Add</button>
                 <button id="itemButton" onclick="window.location.href='item.html'">Item Assets</button>
                 <button id="addNewNameBtn" class="print-btn">Add New Name</button>
-                <button class="print-btn" onclick="printTableData()">CETAK DATA</button>
+                <button class="print-btn" onclick="printTableData()">Print</button>
             </div>
             <form id="requestForm">
                 <label for="nomor_request">Nomor Request</label>
@@ -250,11 +267,37 @@
                 </select>
                 <label for="Nama">Nama</label>
                 <select id="Nama" required>
-                    <!-- Options will be dynamically populated -->
+                    <option value="INDIRA RULLY PRICILIA">INDIRA RULLY PRICILIA</option>
+                    <option value="PUTUT ADI PRAKOSO">PUTUT ADI PRAKOSO</option>
+                    <option value="RIJKI HIDAYAT">RIJKI HIDAYAT</option>
+                    <option value="FERRI RIZALDI">FERRI RIZALDI</option>
+                    <option value="TRIARDHY FIKRI NUGRAHA">TRIARDHY FIKRI NUGRAHA</option>
+                    <option value="MOSSES ARA'AL DE SELA">MOSSES ARA'AL DE SELA</option>
+                    <option value="JAELANI">JAELANI</option>
+                    <option value="JIHAN TSHIVANA">JIHAN TSHIVANA</option>
+                    <option value="OCTAVIANA">OCTAVIANA</option>
+                    <option value="RIZQI SAPUTRI">RIZQI SAPUTRI</option>
+                    <option value="ARYA PRATAMA PUTRA">ARYA PRATAMA PUTRA</option>
+                    <option value="DEWI RABIATUL ZAHRO">DEWI RABIATUL ZAHRO</option>
+                    <option value="NOVIA ANGGRAINI">NOVIA ANGGRAINI</option>
+                    <option value="DEBORA HIZKHIA PARDEDE">DEBORA HIZKHIA PARDEDE</option>
                 </select>
                 <label for="peminjam">Peminjam</label>
                 <select id="peminjam" required>
-                    <!-- Options will be dynamically populated -->
+                    <option value="INDIRA RULLY PRICILIA">INDIRA RULLY PRICILIA</option>
+                    <option value="PUTUT ADI PRAKOSO">PUTUT ADI PRAKOSO</option>
+                    <option value="RIJKI HIDAYAT">RIJKI HIDAYAT</option>
+                    <option value="FERRI RIZALDI">FERRI RIZALDI</option>
+                    <option value="TRIARDHY FIKRI NUGRAHA">TRIARDHY FIKRI NUGRAHA</option>
+                    <option value="MOSSES ARA'AL DE SELA">MOSSES ARA'AL DE SELA</option>
+                    <option value="JAELANI">JAELANI</option>
+                    <option value="JIHAN TSHIVANA">JIHAN TSHIVANA</option>
+                    <option value="OCTAVIANA">OCTAVIANA</option>
+                    <option value="RIZQI SAPUTRI">RIZQI SAPUTRI</option>
+                    <option value="ARYA PRATAMA PUTRA">ARYA PRATAMA PUTRA</option>
+                    <option value="DEWI RABIATUL ZAHRO">DEWI RABIATUL ZAHRO</option>
+                    <option value="NOVIA ANGGRAINI">NOVIA ANGGRAINI</option>
+                    <option value="DEBORA HIZKHIA PARDEDE">DEBORA HIZKHIA PARDEDE</option>
                 </select>
                 <label for="item">Item</label>
                 <select id="item" required>
@@ -529,6 +572,12 @@
             printWindow.document.write('</body></html>');
             printWindow.document.close();
             printWindow.print();
+        }
+
+        function logout() {
+            // Here you would typically clear any user session data
+            // For this example, we'll just redirect to the login page
+            window.location.href = 'login.html';
         }
     </script>
 </body>
