--- a/karyawan.html
+++ b/karyawan.html
@@ -10,10 +10,25 @@
         .top-bar h1 {margin: 0; font-size: 32px; color: white;}
         .auth-buttons {position: absolute; right: 10px;}
         .auth-buttons button {background-color: #3498db; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;}
-        .sidebar {width: 240px; background-color: #2c3e50; color: white; padding: 20px; height: calc(100vh - 120px); position: fixed; top: 120px; left: 0; overflow-y: auto; display: flex; flex-direction: column; justify-content: space-between;}
+        .sidebar {width: 250px; background-color: #2c3e50; color: white; padding: 20px; height: calc(100vh - 100px); position: fixed; top: 120px; left: 0; overflow-y: auto; display: flex; flex-direction: column; justify-content: space-between;}
         .sidebar a {color: white; text-decoration: none; display: block; padding: 15px 0; font-size: 18px; transition: background-color 0.3s;}
         .sidebar a:hover {background-color: #34495e;}
-        .sidebar h2 {font-size: 28px; color: white; margin-bottom: 30px;}
+        .sidebar h3 {font-size: 28px; color: white; margin-bottom: 20px;}
+        .logout-btn {
+            background-color: #f28b82;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+            width: 100%;
+            margin-top: 20px;
+        }
+        .logout-btn:hover {
+            background-color: #c0392b;
+        }
         .main-content {flex: 1; padding: 140px 20px 20px 290px; margin-left: 0;}
         form {background-color: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);}
         input[type="text"], select, textarea, input[type="file"] {width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 4px;}
@@ -39,21 +54,6 @@
         .kebutuhan-options {display: flex; gap: 10px; margin: 10px 0;}
         .kebutuhan-options label {display: flex; align-items: center; gap: 5px;}
         #searchInput, #sortInput {width: 200px; display: inline-block; margin-right: 10px;}
-        .logout-btn {
-            background-color: #99564f;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-            width: 100%;
-            margin-top: 20px;
-        }
-        .logout-btn:hover {
-            background-color: #c0392b;
-        }
         .controls {margin-bottom: 20px;}
         @media print {.action-buttons, td:nth-last-child(1), td:nth-last-child(2), th:nth-last-child(1), th:nth-last-child(2), .print-button, .toggle-button, .top-bar, .sidebar {display: none !important;}}
         .success-alert {display: none; background-color: #2ecc71; color: white; padding: 10px; border-radius: 4px; margin-top: 10px;}
@@ -64,8 +64,7 @@
     <div class="top-bar">
         <h1>Karyawan</h1>
         <div class="auth-buttons">
-            <button onclick="window.location.href='login.html'"><i class="fas fa-user"></i>Login</button>
-            <button class="logout-btn" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
+            <button onclick="window.location.href='login.html'"><i class="fas fa-user"></i> Login</button>
         </div>
     </div>
     <div class="sidebar">
