--- a/karyawan.html
+++ b/karyawan.html
@@ -10,10 +10,31 @@
         .top-bar h1 {margin: 0; font-size: 32px; color: white;}
         .auth-buttons {position: absolute; right: 10px;}
         .auth-buttons button {background-color: #3498db; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;}
-        .sidebar {width: 250px; background-color: #2c3e50; color: white; padding: 20px; height: calc(100vh - 100px); position: fixed; top: 120px; left: 0; overflow-y: auto; display: flex; flex-direction: column; justify-content: space-between;}
-        .sidebar a {color: white; text-decoration: none; display: block; padding: 15px 0; font-size: 18px; transition: background-color 0.3s;}
+        .sidebar {
+            width: 200px;
+            background-color: #2c3e50;
+            color: white;
+            padding: 20px;
+            height: calc(100vh - 100px);
+            position: fixed;
+            top: 120px;
+            left: 0;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            font-size: 14px;
+        }
+        .sidebar a {
+            color: white;
+            text-decoration: none;
+            display: block;
+            padding: 12px 0;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
         .sidebar a:hover {background-color: #34495e;}
-        .sidebar h3 {font-size: 28px; color: white; margin-bottom: 20px;}
+        .sidebar h3 {font-size: 24px; color: white; margin-bottom: 20px;}
         .logout-btn {
             background-color: #f28b82;
             color: white;
@@ -29,11 +50,17 @@
         .logout-btn:hover {
             background-color: #c0392b;
         }
-        .main-content {flex: 1; padding: 140px 20px 20px 290px; margin-left: 0;}
+        .main-content {flex: 1; padding: 140px 20px 20px 220px; margin-left: 0;}
         form {background-color: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);}
         input[type="text"], select, textarea, input[type="file"] {width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 4px;}
         input[type="submit"], .print-button, .toggle-button {background-color: #3498db; color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; display: inline-block; margin-top: 10px; margin-right: 10px;}
-        table {width: 100%; border-collapse: collapse; margin-top: 20px; background-color: white; box-shadow: 0 0 10px rgba(0,0,0,0.1);}
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
         th, td {text-align: left; padding: 12px; border-bottom: 1px solid #ddd;}
         th {background-color: #3498db; color: white;}
         .print-button, .toggle-button {
@@ -58,6 +85,12 @@
         @media print {.action-buttons, td:nth-last-child(1), td:nth-last-child(2), th:nth-last-child(1), th:nth-last-child(2), .print-button, .toggle-button, .top-bar, .sidebar {display: none !important;}}
         .success-alert {display: none; background-color: #2ecc71; color: white; padding: 10px; border-radius: 4px; margin-top: 10px;}
         .form-label {color: #3498db; font-weight: bold; margin-top: 10px; display: block;}
+        #employeeTableBody tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        #employeeTableBody tr:nth-child(odd) {
+            background-color: #ffffff;
+        }
     </style>
 </head>
 <body>
